--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -5,6 +5,10 @@ description: Conventions for types, fields, and arguments
 tags: [schema-design]
 ---
 
+## Enforcing conventions
+
+Use GraphOS [schema linting](/graphos/delivery/schema-linter/) to catch naming violations. GraphOS schema linting can be done within [schema checks](/graphos/delivery/schema-checks) which can allow you to enforce this in your CI/CD pipelines, or it can be run using [Rover](/graphos/delivery/schema-linter#one-off-linting) for one-off requests locally.
+
 ## High-level guidance
 
 - Regardless of your chosen conventions, be consistent across the entire schema.
@@ -119,10 +123,6 @@ type AddCustomerResponse {
 ```
 
 ## Additional considerations
-
-### Enforcing conventions
-
-Use GraphOS [schema linting](/graphos/delivery/schema-linter/) to catch naming violations. GraphOS schema linting can be done within [schema checks](/graphos/delivery/schema-checks) which can allow you to enforce this in your CI/CD pipelines, or it can be run using [Rover](/graphos/delivery/schema-linter#one-off-linting) for one-off requests locally.
 
 ### Namespacing
 
