Change `ButtonLink` colorscheme

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -28,7 +28,7 @@ flowchart LR;
 
 <p>
   <ButtonLink
-    colorScheme="indigo"
+    colorScheme="horizon"
     href="/graphos/quickstart/cloud/"
     style={{
       marginRight: '10px'
@@ -36,7 +36,7 @@ flowchart LR;
   >
     Create your first supergraph!
   </ButtonLink>
-  <ButtonLink colorScheme="gray" href="/intro/platform/">
+  <ButtonLink colorScheme="satellite" href="/intro/platform/">
     What's a supergraph?
   </ButtonLink>
 </p>
@@ -91,7 +91,7 @@ An Enterprise plan also provides access to our Graph Champions community and a d
 **Ready to create your first supergraph?**
 
 <ButtonLink
-  colorScheme="indigo"
+  colorScheme="horizon"
   href="/graphos/quickstart/cloud/"
   style={{
     marginRight: '10px'
