--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -16,7 +16,7 @@ You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterpr
 <p>
   <ButtonLink
     size="lg"
-    colorScheme="indigo"
+    colorScheme="horizon"
     href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
     style={{
       marginRight: '10px'
