--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -15,7 +15,11 @@ Every Apollo organization has an associated plan that determines which GraphOS f
 
 You can check your organization's current plan in GraphOS Studio. From your organization's page, go to the **Settings** tab and scroll down to the **Plan and Billing** section:
 
-<img class="screenshot" alt="The Plan and Billing section in GraphOS Studio" src="../img/plan-and-billing.jpg" />
+<img
+  className="screenshot"
+  alt="The Plan and Billing section in GraphOS Studio"
+  src="../img/plan-and-billing.jpg"
+/>
 
 ## Current plans
 
@@ -23,11 +27,11 @@ Apollo offers the following plans to new organizations:
 
 > **These are _brief summaries_ of each plan.** For complete plan details, see the [pricing page](https://apollographql.com/pricing).
 
-| Plan | Description |
-|------|-------------|
-| **Serverless (Free)** | Provides access to serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free. |
-| **Serverless** | Removes the operation limit included in the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention. |
-| **Enterprise** | These plans feature self-hosted routing, advanced security and schema delivery features, access control, and more. They include negotiable usage rates. They do _not_ currently support cloud supergraphs. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials). |
+| Plan                  | Description                                                                                                                                                                                                                                                                                                  |
+| --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Serverless (Free)** | Provides access to serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free.                                                                                                             |
+| **Serverless**        | Removes the operation limit included in the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                                |
+| **Enterprise**        | These plans feature self-hosted routing, advanced security and schema delivery features, access control, and more. They include negotiable usage rates. They do _not_ currently support cloud supergraphs. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials). |
 
 > An Enterprise plan provides access to all GraphOS Enterprise features, our Graph Champions community, and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 >
@@ -42,7 +46,7 @@ You can sign up for a GraphOS Enterprise trial to freely test out _most_ [GraphO
 <p>
   <ButtonLink
     size="lg"
-    colorScheme="indigo"
+    colorScheme="horizon"
     href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
   >
     Start an Enterprise trial
@@ -55,11 +59,21 @@ With an Enterprise trial, you create a _new_ GraphOS organization that behaves i
 
 You can identify your trial organization in [GraphOS Studio](https://studio.apollographql.com) by the `ENTERPRISE TRIAL` label next to its name in the upper left:
 
-<img class="screenshot" alt="Label applied to Enterprise orgs in Studio" src="../img/trial-org-label.jpg" width="500" />
+<img
+  className="screenshot"
+  alt="Label applied to Enterprise orgs in Studio"
+  src="../img/trial-org-label.jpg"
+  width="500"
+/>
 
 Studio also displays how many days remain in your trial in the upper right:
 
-<img class="screenshot" alt="Enterprise trial duration indicator in Studio" src="../img/trial-org-timeleft.jpg" width="500" />
+<img
+  className="screenshot"
+  alt="Enterprise trial duration indicator in Studio"
+  src="../img/trial-org-timeleft.jpg"
+  width="500"
+/>
 
 In the final few days of your trial period, Studio displays an additional notification banner.
 
@@ -79,9 +93,9 @@ If you have a non-Enterprise Apollo organization that was created before **4 Oct
 >
 > If your organization is on one of these plans, we strongly recommend [upgrading to a current plan](#upgrading-to-a-current-plan).
 
-| Plan | Description |
-|------|-------------|
-| **Free** | Our legacy free plan, different from the current **Serverless (Free)** plan. Provides basic GraphOS features, with _very_ limited data retention and maximum query volume. |
+| Plan     | Description                                                                                                                                                                                                          |
+| -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Free** | Our legacy free plan, different from the current **Serverless (Free)** plan. Provides basic GraphOS features, with _very_ limited data retention and maximum query volume.                                           |
 | **Team** | Our legacy plan for small and medium teams, which is billed based on the number of team members (i.e., seat-based). Raises the retention and query volume limits from the **Free** plan, but does not _remove_ them. |
 
 ### Upgrading to a current plan
@@ -90,6 +104,10 @@ To create cloud supergraphs, your Apollo organization needs to be on either the 
 
 **If your organization is on the legacy Free plan,** you can convert your organization to the current **Serverless (Free)** plan by clicking **Convert to Serverless (Free)** in the top-right corner of your organization's page in Studio:
 
-<img class="screenshot" alt="A screenshot of the Convert to Serverless (Free) button" src="../img/convert-to-serverless.jpg" />
+<img
+  className="screenshot"
+  alt="A screenshot of the Convert to Serverless (Free) button"
+  src="../img/convert-to-serverless.jpg"
+/>
 
 **If you're on the legacy Teams plan**, you currently need to create a _new_ organization to be able to create cloud supergraphs.
