--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -5,7 +5,7 @@ description: Secure your graph while minimizing request latency
 
 <GraphOSEnterpriseRequired />
 
-GraphQL APIs are broadly open by design. While allowing freeform requests expedites client development, it necessitates securing your graph against potentially malicious requests. 
+GraphQL APIs are broadly open by design to provide flexibility and efficiency in client development. However, this openness also introduces the risk of potentially malicious requests and the subsequent need to secure your graph.
 
 <PQIntro />
 
