--- a/src/content/shared/pq-intro.mdx
+++ b/src/content/shared/pq-intro.mdx
@@ -1,6 +1,6 @@
 With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a **persisted query list** (**PQL**) for your supergraph's self-hosted router. The [Apollo Router](/router/) checks incoming requests against the PQL which acts as an operation safelist made by your first-party apps.
 
-> You can include any kind of operation in your PQL, including queries, mutations, and subscriptions.
+> You can register any kind of operation in your PQL, including queries, mutations, and subscriptions.
 
 ```mermaid
 flowchart LR
