--- a/src/content/shared/pq-intro.mdx
+++ b/src/content/shared/pq-intro.mdx
@@ -1,6 +1,4 @@
-With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a **persisted query list** (**PQL**) for your supergraph's self-hosted router. The [Apollo Router](/router/) checks incoming requests against the PQL which acts as an operation safelist made by your first-party apps.
-
-> You can register any kind of operation in your PQL, including queries, mutations, and subscriptions.
+With [GraphOS Enterprise](/graphos/enterprise/), you can enhance your supergraph's security by maintaining a **persisted query list** (**PQL**) for your supergraph's self-hosted router. To create and update the PQL, first-party apps register their operations to the PQL at build time.
 
 ```mermaid
 flowchart LR
@@ -10,19 +8,41 @@ flowchart LR
   androidClient("Android client");
   iosClient("iOS client");
   end
+  pql[[Persisted<br/>Query List]];
+  webClient --> pql
+  androidClient -->|Register operations| pql
+  iosClient --> pql
+```
+
+> You can register any kind of operation in your PQL, including queries, mutations, and subscriptions.
+
+At runtime, the [Apollo Router](/router/) checks incoming requests against the PQL, which can act as operation safelist, depending on your [router configuration](#2-router-configuration).
+
+```mermaid
+flowchart LR
+  subgraph Apps["First-party apps"]
+  direction LR
+  webClient("Web client");
+  androidClient("Android client");
+  iosClient("iOS client");
+  end
+  subgraph Supergraph["Supergraph"]
     subgraph Router["Apollo Router"]
         direction TB
         router(["Graph<br/>Router"]);
         pql[[Persisted<br/>Query List]];
         router <--> pql
     end
-  subgraph Supergraph
-  direction LR
-  api1(["GraphQL API"]);
-  api2(["GraphQL API"]);
-  api3(["GraphQL API"]);
+    subgraph Subgraphs
+      direction LR
+      api1(["GraphQL API"]);
+      api2(["GraphQL API"]);
+      api3(["GraphQL API"]);
+    end
   end
-  Apps -->|Requests| Router -->|Registered<br/> operations| Supergraph
+  Apps -->|Requests| Router
+  Router -.->|"❌ Unregistered<br/> subgraph operations"| Subgraphs
+  Router -->|"✅ Registered<br/> subgraph operations"| Subgraphs
 ```
 
 Your router can use its persisted query list (PQL) to both **protect your supergraph** and **speed up your clients' operations**:
